--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,23 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency> 
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId> 
+			<version>3.0.8</version>
+		</dependency>
 
 	</dependencies>
 
