--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
