--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 	<name>post</name>
 	<description>Projeto pessoal para postagens</description>
 	<properties>
-		<java.version>12</java.version>
+		<java.version>11</java.version>
+		<squiggly.version>1.3.18</squiggly.version>
 	</properties>
 
 	<dependencies>
@@ -79,11 +80,18 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<dependency> 
+		<dependency>
+			<groupId>com.github.bohnman</groupId>
+			<artifactId>squiggly-filter-jackson</artifactId>
+			<version>${squiggly.version}</version>
+		</dependency>
+		
+		
+		<!-- <dependency> 
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId> 
 			<version>3.0.8</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
