Added PhotoPost service and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,19 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+post.storage.tipo=local
+
+post.storage.local.diretorio-foto=C:\\Users\\Belosos\\Pictures\\fotosPostagens
+
+post.storage.s3.id-chave-acesso=EXEMPLO
+post.storage.s3.chave-acesso-secreta=YSmK4SAJGN46+VGPEMPefEFSKPd
+post.storage.s3.bucket=post-test
+post.storage.s3.regiao=us-east-1
+post.storage.s3.diretorio-fotos=catalogo
+
+
+
+
+
+
