--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<squiggly.version>1.3.18</squiggly.version>
+		<aws-java-sdk-s3.version>1.12.402</aws-java-sdk-s3.version>
 	</properties>
 
 	<dependencies>
@@ -86,6 +87,11 @@
 			<version>${squiggly.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>${aws-java-sdk-s3.version}</version>
+		</dependency>
 		
 		<!-- <dependency> 
 			<groupId>org.codehaus.groovy</groupId>
