Added hypermedia with Spring HATEOAS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
+server.compression.enabled=true
+
 post.storage.tipo=local
 
 post.storage.local.diretorio-foto=C:\\Users\\Belosos\\Pictures\\fotosPostagens
