--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,18 @@ post.storage.s3.bucket=post-test
 post.storage.s3.regiao=us-east-1
 post.storage.s3.diretorio-fotos=catalogo
 
+springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/authorize
+springdoc.oAuthFlow.tokenUrl=http://localhost:8080/oauth/token
+
+springdoc.swagger-ui.oauth.client-id=web
+springdoc.swagger-ui.oauth.client-secret=123
+
+springdoc.swagger-ui.oauth2RedirectUrl=http://localhost:8080/swagger-ui/oauth2-redirect.html
+
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+
+springdoc.packages-to-scan=com.socialpost.post.api.controller
+
 #logging.level.org.springframework.security=DEBUG
 
 
