Updated to newer versions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,23 +29,24 @@ post.storage.s3.bucket=post-test
 post.storage.s3.regiao=us-east-1
 post.storage.s3.diretorio-fotos=catalogo
 
-springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/authorize
-springdoc.oAuthFlow.tokenUrl=http://localhost:8080/oauth/token
+springdoc.oAuthFlow.authorizationUrl=http://127.0.0.1:8080/oauth2/authorize
+springdoc.oAuthFlow.tokenUrl=http://127.0.0.1:8080/oauth2/token
 
-springdoc.swagger-ui.oauth.client-id=web
-springdoc.swagger-ui.oauth.client-secret=123
+springdoc.swagger-ui.oauth.client-id=socialpostweb
+springdoc.swagger-ui.oauth.client-secret=web123
+
+springdoc.swagger-ui.oauth2RedirectUrl=http://127.0.0.1:8080/swagger-ui/oauth2-redirect.html
+
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+springdoc.swagger-ui.oauth.use-basic-authentication-with-access-code-grant=true
+
+springdoc.packages-to-scan=com.socialpost.post.api.controller
 
 socialpost.auth.provider-url=http://localhost:8080
 
 spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth2/introspect
 spring.security.oauth2.resourceserver.opaquetoken.client-id=socialpost-backend
 spring.security.oauth2.resourceserver.opaquetoken.client-secret=backend123
-
-springdoc.swagger-ui.oauth2RedirectUrl=http://localhost:8080/swagger-ui/oauth2-redirect.html
-
-springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
-
-springdoc.packages-to-scan=com.socialpost.post.api.controller
 
 #logging.level.org.springframework.security=DEBUG
 
