--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
+		<version>3.0.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.socialpost</groupId>
@@ -16,11 +16,11 @@
 	<description>Projeto pessoal para postagens</description>
 	<properties>
 		<java.version>17</java.version>
-		<squiggly.version>1.3.18</squiggly.version>
+		<modelmapper.version>3.1.1</modelmapper.version>
 		<aws-java-sdk-s3.version>1.12.402</aws-java-sdk-s3.version>
 		<oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version>
-		<springdoc.version>1.6.9</springdoc.version>
-		<springauthserver.version>0.3.1</springauthserver.version>
+		<springdoc.version>2.0.0</springdoc.version>
+		<springauthserver.version>1.0.0</springauthserver.version>
 	</properties>
 
 	<dependencies>
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
-			<version>3.1.1</version>
+			<version>${modelmapper.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -95,34 +95,10 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.github.bohnman</groupId>
-			<artifactId>squiggly-filter-jackson</artifactId>
-			<version>${squiggly.version}</version>
-			<!--<exclusions>
-				<exclusion>
-					<groupId>com.google.guava</groupId>
-					<artifactId>guava</artifactId>
-				</exclusion> 
-			</exclusions>-->
-		</dependency>
-		
-		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>${aws-java-sdk-s3.version}</version>
 		</dependency>
-		
-		<!--<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${spring-fox.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.plugin</groupId>
-					<artifactId>spring-plugin-core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>-->
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -161,30 +137,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-common</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
 		
 		<dependency>
-      		<groupId>org.springdoc</groupId>
-      		<artifactId>springdoc-openapi-ui</artifactId>
-      		<version>${springdoc.version}</version>
-   		</dependency>
-   		
-   		<dependency>
-      		<groupId>org.springdoc</groupId>
-      		<artifactId>springdoc-openapi-hateoas</artifactId>
-      		<version>${springdoc.version}</version>
-   		</dependency>
-   		
-   		<dependency>
-      		<groupId>org.springdoc</groupId>
-      		<artifactId>springdoc-openapi-security</artifactId>
-      		<version>${springdoc.version}</version>
-   		</dependency>
-		
-		<!-- <dependency> 
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy</artifactId> 
-			<version>3.0.8</version>
-		</dependency> -->
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
 
 	</dependencies>
 
